--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <!-- home section -->
     <div id="home">
-        <img src="images/profile_picture.jpg" alt="Hero picture">
+        <img src="portfolio/images/profile_picture.jpg" alt="Hero picture">
         <p class="txt1">Hello,<span> I'm</span></p>
         <p class="txt2">SHANUKA DILSHAN</p>
         <p class="txt3">A Creative 3D Artist From Sri Lanka</p>
